Outline issue with Chrome. Blurry outline looks odd but don’t want to remove so thinned.

--- a/less/components/ui.less
+++ b/less/components/ui.less
@@ -38,6 +38,10 @@
 	.background-position(0, 50%);
 }
 
+.btn:focus {
+	outline-width: 1px;
+}
+
 .btn:active {
 	background-color: darken(@silver, 10%);
 	.background-position(0, 100%);
